--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ ios/.xcode.env.local
 
 # Android/IntelliJ
 #
+google-services.json
 build/
 .idea
 .gradle
@@ -64,3 +65,4 @@ yarn-error.log
 
 # testing
 /coverage
+
