--- a/package.json
+++ b/package.json
@@ -10,23 +10,23 @@
     "test": "jest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@react-native-community/async-storage": "^1.12.1",
-    "@react-native-firebase/app": "^19.0.0",
-    "@react-native-firebase/auth": "^19.0.0",
-    "@react-native-firebase/firestore": "^19.0.0",
     "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/stack": "^6.3.21",
     "axios": "^1.6.7",
     "react": "18.2.0",
-    "react-native": "0.73.4",
+    "react-hook-form": "^7.51.2",
+    "react-native": "^0.73.5",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-svg": "^14.1.0",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
