--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-hook-form": "^7.51.2",
     "react-native": "^0.73.5",
+    "react-native-device-info": "^10.13.2",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
